handle character collection view if no data coming

--- a/MARVEL APP/Resources/Info.plist
+++ b/MARVEL APP/Resources/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Private_Key</key>
+	<string>$(Private_Key)</string>
+	<key>Public_Key</key>
+	<string>$(Public_Key)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
